Arena <: SegmentScope